--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.BedUtils.jar}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${reference.BedUtils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +73,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.BedUtils=../BedUtils
-reference.BedUtils.jar=${project.BedUtils}/dist/BedUtils.jar
+reference.BedUtils.jar=${project.BedUtils}/nbdist/BedUtils.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
